2002-07-04  Nick Drochak  <ndrochak@gol.com>

	* DateTimeTest.cs: Made tests pass on ms.net.  Well, they pass in
	timezone JST.  Need to test in others.  Maybe I'll fly over to GMT
	and see how they work.  Supposed to be eaiser there.

2002-07-04  Nick Drochak  <ndrochak@gol.com>

	* ConvertTest.cs: Make the test generate the overflow exceptions on
	mono on Linux.
	* DecimalTest2.cs: Report exception thrown during subtraction.

2002-07-03  Nick Drochak  <ndrochak@gol.com>

	* DoubleTest.cs: Fix some Assert/AssertEquals usage.

2002-07-03  Nick Drochak  <ndrochak@gol.com>

	* ArrayTest.cs: Re-enable some tests.  Let's see what's broken still.

2002-06-20  Nick Drochak  <ndrochak@gol.com>

	* DecimalTest2.cs: Make tests pass against ms.net.

2002-06-19  Nick Drochak  <ndrochak@gol.com>

	* AllTests.cs: Add missing test: DecimalTest2
	* DecimalTest2.cs: Convert Console.Writeline() into a Fail()

2002/06/14  Nick Drochak <ndrochak@gol.com>

	* Int64Test.cs: Make currency symbol test more culturally sensitive.

2002-06-14  Nick Drochak  <ndrochak@gol.com>

	* DateTimeTest.cs: Make some of the tests a bit more timezone neutral.

2002-06-12   Nick Drochak  <ndrochak@gol.com>

	* ConvertTest.cs: Punt bug in DateTime.Parse() over to that test.
	* DateTimeTest.cs: Add test for date format of yyyy-mm-dd which mono
	doesn't handle automagically like ms.net does.  This smells like a 
	LAMESPEC, however.

2002/06/12  Nick Drochak <ndrochak@gol.com>

	* RandomTest.cs: Exercise Next(min,max) a little more, especially
	boundary conditions.

2002-06-11  Nick Drochak  <ndrochak@gol.com>

	* StringTest.cs: Check for "end of string" conditions for IndexOf() and
	Substring().

2002-06-11  Nick Drochak  <ndrochak@gol.com>

	* DoubleTest.cs: Add some more detail to failure message.
	* Int64Test.cs: Add some details, and fix a copy-paste error.
	* UInt32Test.cs: Fix currency symbol/culture issues
	* UInt64Test.cs: Fix currency symbol/culture issues
